# inactive-mailbox-manager

./: .gitignore  README.md  config.example.yaml  inactive_mailbox_manager_spec.md  main.py  pyproject.toml  requirements.txt  run_desktop.py  run_terminal.py
.claude/: settings.local.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-core-discovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-operations/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-cost-reporting/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-terminal-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md
.planning/phases/06-desktop-gui/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-polish-docs/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
config/: branding.yaml  settings.yaml
docs/: TROUBLESHOOTING.md  USER_GUIDE.md
src/: __init__.py
src/core/: __init__.py  bulk_operations.py  cache_manager.py  cost_calculator.py  dashboard_service.py  exchange_connection.py  export_service.py  filter_service.py  hold_analyzer.py  mailbox_service.py  onboarding.py  operation_monitor.py  powershell_executor.py  recovery_service.py  recovery_validator.py  recovery_wizard.py  report_generator.py  restore_service.py  statistics_service.py
src/gui/: __init__.py  app.py  theme.py
src/gui/components/: __init__.py  sidebar.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  authentication.py  command_builder.py  config.py  error_handler.py  exceptions.py  logging.py  ps_parser.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_models.py  test_services.py
(+20 files in other folders)
